--- a/package.json
+++ b/package.json
@@ -7,26 +7,30 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:client": "webpack --config webpack.client.config.js",
     "build:server": "webpack --config webpack.server.config.js",
-    "build": "rm -rf ./__build__ && (npm run build:client -- --env.mode production & npm run build:server -- --env.mode production)",
-    "start": "npm run build && node ./__build__/server.js",
-    "start:dev": "rm -rf ./__build__ && (webpack-dev-server --config webpack.client.config.js --env.mode development & npm run build:server -- --env.mode development)",
+    "build": "rm -rf ./__build__ && npm run build:client -- --env.mode production && npm run build:server -- --env.mode production",
+    "start": "node ./__build__/server.js",
+    "start:dev": "rm -rf ./__build__ && (webpack-dev-server --config webpack.client.config.js --env.mode development & (npm run build:client -- --env.mode development && npm run build:server -- --env.mode development))",
     "analyze:client": "npm run build:client -- --env.mode production --env.presets analyze"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "compression": "^1.7.3",
     "express": "^4.16.4",
+    "handlebars": "^4.0.12",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.1.1",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
@@ -41,7 +45,9 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
+    "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
     "prettier": "^1.15.1",
