--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:server": "webpack --config webpack.server.config.js",
     "build": "rm -rf ./__build__ && npm run build:client -- --env.mode production && npm run build:server -- --env.mode production",
     "start": "node ./__build__/server.js",
-    "start:dev": "rm -rf ./__build__ && (webpack-dev-server --config webpack.client.config.js --env.mode development & (npm run build:client -- --env.mode development && npm run build:server -- --env.mode development))",
-    "analyze:client": "npm run build:client -- --env.mode production --env.presets analyze"
+    "start:dev": "rm -rf ./__build__ && (webpack-dev-server --config webpack.client.config.js --env.mode development & (just-wait -p \"./__build__/public/index.html\" && npm run build:server -- --env.mode development))",
+    "analyze:client": "rm -rf ./__build__ && npm run build:client -- --env.mode production --env.presets analyze"
   },
   "author": "",
   "license": "ISC",
@@ -31,8 +31,9 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.4.2",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "compression-webpack-plugin": "^2.0.0",
@@ -45,11 +46,12 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
-    "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
+    "just-wait": "^1.0.11",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.15.1",
     "react-hot-loader": "^4.3.11",
     "sass-loader": "^7.1.0",
@@ -60,6 +62,7 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "write-file-webpack-plugin": "^4.5.0"
   }
 }
