--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,18 @@
     ],
     "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "alias": {
+          "components": "./web/components",
+          "images": "./web/images",
+          "styles": "./web/styles",
+          "utils": "./utils"
+        }
+      }
+    ],
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
