--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,11 @@
       "jsx": true
     }
   },
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    }
+  },
   "rules": {
     "global-require": 0,
     "import/no-dynamic-require": 0,
