--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-module-resolver": "^3.1.1",
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^1.0.0",
     "enzyme": "^3.8.0",
@@ -46,6 +47,7 @@
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
+    "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
