--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:server": "webpack --config webpack.server.config.js",
     "build": "rm -rf ./__build__ && npm run build:client -- --env.mode production && npm run build:server -- --env.mode production",
     "start": "node ./__build__/server.js",
-    "start:dev": "rm -rf ./__build__ && (webpack-dev-server --config webpack.client.config.js --env.mode development & (just-wait -p \"./__build__/public/index.html\" && npm run build:server -- --env.mode development))",
+    "start:dev": "rm -rf ./__build__ && (webpack-dev-server --config webpack.client.config.js --env.mode development & (just-wait -t 60 -p \"./__build__/public/index.html\" && npm run build:server -- --env.mode development))",
     "analyze:client": "rm -rf ./__build__ && npm run build:client -- --env.mode production --env.presets analyze"
   },
   "author": "",
@@ -34,24 +34,24 @@
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/jest": "^23.3.12",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^9.4.2",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-module-resolver": "^3.1.1",
     "compression-webpack-plugin": "^2.0.0",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -65,12 +65,18 @@
     "react-hot-loader": "^4.3.11",
     "regenerator-runtime": "^0.13.1",
     "sass-loader": "^7.1.0",
+    "source-map-loader": "^0.2.4",
     "start-server-webpack-plugin": "^2.2.5",
     "style-loader": "^0.23.1",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.2.2",
     "webpack": "^4.21.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2",
     "write-file-webpack-plugin": "^4.5.0"
@@ -78,7 +84,10 @@
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|scss|less)$": "identity-obj-proxy"
-    }
+      "\\.(css|scss|less)$": "identity-obj-proxy",
+      "^components/(.*)": "<rootDir>/web/components/$1",
+      "^utils/(.*)": "<rootDir>/utils/$1"
+    },
+    "preset": "ts-jest/presets/js-with-ts"
   }
 }
