--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "base-project",
   "version": "1.0.0",
-  "description": "test",
-  "main": "index.js",
+  "description": "A base project using Webpack, Express, React, React Router, Jest, Enzyme, and TypeScript",
+  "main": "index.jsx",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch",
     "build:client": "webpack --config webpack.client.config.js",
     "build:server": "webpack --config webpack.server.config.js",
     "build": "rm -rf ./__build__ && npm run build:client -- --env.mode production && npm run build:server -- --env.mode production",
@@ -13,7 +12,7 @@
     "start:dev": "rm -rf ./__build__ && (webpack-dev-server --config webpack.client.config.js --env.mode development & (just-wait -t 60 -p \"./__build__/public/index.html\" && npm run build:server -- --env.mode development))",
     "analyze:client": "rm -rf ./__build__ && npm run build:client -- --env.mode production --env.presets analyze"
   },
-  "author": "",
+  "author": "Neal Higa",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
@@ -34,8 +33,11 @@
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/compression": "0.0.36",
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/express": "^4.16.0",
+    "@types/handlebars": "^4.0.40",
     "@types/jest": "^23.3.12",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
@@ -80,14 +82,5 @@
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2",
     "write-file-webpack-plugin": "^4.5.0"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|scss|less)$": "identity-obj-proxy",
-      "^components/(.*)": "<rootDir>/web/components/$1",
-      "^utils/(.*)": "<rootDir>/utils/$1"
-    },
-    "preset": "ts-jest/presets/js-with-ts"
   }
 }
