--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/jest": "^23.3.12",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
     "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^9.4.2",
@@ -73,7 +75,7 @@
     "tslint": "^5.12.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.2.2",
+    "typescript": "^3.1.6",
     "webpack": "^4.21.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
