--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "handlebars": "^4.0.12",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
@@ -35,16 +37,16 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@types/compression": "0.0.36",
-    "@types/enzyme": "^3.1.15",
+    "@types/enzyme": "^3.1.16",
     "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/express": "^4.16.0",
+    "@types/express": "^4.16.1",
     "@types/handlebars": "^4.0.40",
-    "@types/jest": "^23.3.12",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
+    "@types/jest": "^23.3.14",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
     "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
-    "@types/webpack-env": "^1.13.6",
+    "@types/webpack-env": "^1.13.7",
     "autoprefixer": "^9.4.2",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^7.0.0-bridge.0",
@@ -73,10 +75,10 @@
     "start-server-webpack-plugin": "^2.2.5",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.5",
-    "tslint": "^5.12.0",
-    "tslint-config-prettier": "^1.17.0",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.1.6",
+    "typescript": "^3.3.3",
     "webpack": "^4.21.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
